--- a/src/interfaces/JanelaConfiguração.form
+++ b/src/interfaces/JanelaConfiguração.form
@@ -6,7 +6,7 @@
     <Property name="title" type="java.lang.String" value="Configura&#xe7;&#xf5;es"/>
     <Property name="resizable" type="boolean" value="false"/>
     <Property name="type" type="java.awt.Window$Type" editor="org.netbeans.modules.form.editors.EnumEditor">
-      <Value id="UTILITY"/>
+      <Value id="POPUP"/>
     </Property>
   </Properties>
   <SyntheticProperties>
